[project]
name = "task4-web-dev"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "evanarnanda", email = "evanarnanda@gmail.com"},
]
dependencies = [
    "fastapi>=0.111.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
start = "fastapi run src/task4_web_dev/main.py"

[tool.pdm]
distribution = true
